cmake_minimum_required(VERSION 3.2)
project(icsneo-server VERSION 1.0.0)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED TRUE)
set(CMAKE_CXX_EXTENSIONS OFF)

set(LIBICSNEO_USE_DEVICE_SHARING OFF CACHE BOOL "" FORCE)
set(LIBICSNEO_BUILD_EXAMPLES OFF CACHE BOOL "" FORCE)
set(LIBICSNEO_BUILD_ICSNEOC OFF CACHE BOOL "" FORCE)
set(LIBICSNEO_BUILD_ICSNEOC_STATIC OFF CACHE BOOL "" FORCE)
set(LIBICSNEO_BUILD_ICSNEOLEGACY OFF CACHE BOOL "" FORCE)

add_subdirectory(libicsneo)

set(CMAKE_INCLUDE_CURRENT_DIR ON)
add_subdirectory(src)
